inicio do bloqueio de paginas com base no cargo do user(superuser ou staff)

--- a/accounts/templates/accounts/account_home.html
+++ b/accounts/templates/accounts/account_home.html
@@ -16,6 +16,16 @@
         <h1>NÃO LOGADO</h1>
     {% endif %}
 
+    {% if user.is_authenticated %}
+        <p>USUARIO LOGADO: {{ user.username }}</p>
+        <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit">Sair</button>
+        </form>
+    {% else %}
+        <p><a href="{% url 'login' %}">Entrar</a></p>
+    {% endif %}
+
     </ul>
 </body>
 </html>
