sistema de permissão de visualização tela de superuser, staff e user comum realizada

--- a/accounts/templates/accounts/account_home.html
+++ b/accounts/templates/accounts/account_home.html
@@ -7,11 +7,12 @@
     <h2>USUARIO LOGADOO</h2>
 
     {% if user.is_authenticated %}
-        <h1>USUARIO LOGADO: {{ user.username }}</h1>
         <h1>{{ user.email }}</h1>
         <h1>{{ user.role }}</h1>
         <h1>{{ user.data_nascimento }}</h1>
         <h1>{{ user.tenant }}</h1>
+        <p>SUPERUSER: {{ user.is_superuser }}</p>
+        <p>STAFF: {{ user.is_staff }}</p>
     {% else %}
         <h1>NÃO LOGADO</h1>
     {% endif %}
