--- a/gamification/templates/gamification/gamification_tasks_list.html
+++ b/gamification/templates/gamification/gamification_tasks_list.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Lista de Tasks</h1>
 
-  <p><a href="#">Criar nova Task</a></p>
+  <p><a href="{% url 'task_create' %}">Criar nova Task</a></p>
 
   <table border="1" cellpadding="5">
     <thead>
