feita atribuição da tarefa com o user, separação por tenant, faltando alguns ajustes ao points após concluir task

--- a/gamification/templates/gamification/gamification_users_tasks_list.html
+++ b/gamification/templates/gamification/gamification_users_tasks_list.html
@@ -35,6 +35,7 @@
   </table>
 
   <p>
+    <a href="{% url 'user_task_create' %}">Atribuir Task a User</a>
     <a href="#">Ver Pontos</a>
     <a href="#">Ver Tasks</a>
   </p>
