--- a/gamification/templates/gamification/gamification_tasks_list.html
+++ b/gamification/templates/gamification/gamification_tasks_list.html
@@ -17,6 +17,7 @@
         <th>Pontos</th>
         <th>Criado por</th>
         <th>Criado em</th>
+
       </tr>
     </thead>
     <tbody>
@@ -28,9 +29,8 @@
         <td>{{ task.criado_por.username }}</td>
         <td>{{ task.criado_em }}</td>
         <td>
-          <a href="#">Ver</a> 
-          <a href="#">Editar</a> 
-          <form action="#" method="post" style="display:inline;">
+          <a href="{% url 'task_edit' task.pk %}">Editar</a> 
+          <form action="{% url 'task_delete' task.pk %}" method="post" style="display:inline;">
             {% csrf_token %}
             <button type="submit">Apagar</button>
           </form>
