arrumando apenas o erro de chat-preview, adicionando um truncatechars

--- a/chat/templates/chat/chat_list.html
+++ b/chat/templates/chat/chat_list.html
@@ -58,7 +58,7 @@
                             {% endif %}
                         </div>
                         {% if chat.messages.last %}
-                            <span class="chat-preview">{{ chat.messages.last.conteudo }}</span>
+                            <span class="chat-preview">{{ chat.messages.last.conteudo|truncatechars:30 }}</span>
                         {% else %}
                             <span class="chat-preview">Sem mensagens</span>
                         {% endif %}
