linkagem das telas ja feitas no feed

--- a/feed/templates/feed/feed.html
+++ b/feed/templates/feed/feed.html
@@ -63,25 +63,22 @@
 
                 <nav class="sidebar-menu">
                     <a href="{% url 'feed:feed' %}" class="menu-item active">
-                        <span class="icon">🏠</span> Feed
+                        <span class="icon">📅</span> Feed
+                    </a>
+                    <a href="{% url 'home' %}" class="menu-item">
+                        <span class="icon">👤</span> Perfil
+                    </a>
+                    <a href="{% url 'points_user' %}" class="menu-item">
+                        <span class="icon">🏅</span> Gamificação
                     </a>
                     <a href="#" class="menu-item">
-                        <span class="icon">👥</span> Friends
+                        <span class="icon">🏆</span> Conquistas
                     </a>
                     <a href="#" class="menu-item">
-                        <span class="icon">📅</span> Event
+                        <span class="icon">🗓️</span> Eventos
                     </a>
                     <a href="#" class="menu-item">
-                        <span class="icon">🎥</span> Watch Videos
-                    </a>
-                    <a href="#" class="menu-item">
-                        <span class="icon">📷</span> Photos
-                    </a>
-                    <a href="#" class="menu-item">
-                        <span class="icon">🛒</span> Marketplace
-                    </a>
-                    <a href="#" class="menu-item">
-                        <span class="icon">📁</span> Files
+                        <span class="icon">📞</span> Call
                     </a>
                 </nav>
 
