criação da tela home de gamificação e linkagem do feed

--- a/feed/templates/feed/feed.html
+++ b/feed/templates/feed/feed.html
@@ -68,7 +68,7 @@
                     <a href="{% url 'home' %}" class="menu-item">
                         <span class="icon">👤</span> Perfil
                     </a>
-                    <a href="{% url 'points_user' %}" class="menu-item">
+                    <a href="{% url 'game_home' %}" class="menu-item">
                         <span class="icon">🏅</span> Gamificação
                     </a>
                     <a href="#" class="menu-item">
