ajeitei o botão de editar e coloquei a generic view de editar, mas esta comentado, preciso fazer a função dele, no chat da conta do senai ja tem uma ajuda

--- a/accounts/templates/accounts/account_home.html
+++ b/accounts/templates/accounts/account_home.html
@@ -21,8 +21,12 @@
     </nav>
 
     <!-- Conteúdo principal -->
+
     <main class="profile-container">
       {% if user.is_authenticated %}
+
+      <button id="editar_btn">editar</button>
+
       <section class="profile-header">
         <div class="profile-photo"></div>
         <h2>{{ user.username }}</h2>
