--- a/accounts/static/accounts/css/user_home.css
+++ b/accounts/static/accounts/css/user_home.css
@@ -5,6 +5,18 @@ body {
   padding: 0;
 }
 
+#editar_btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgb(236, 236, 236);
+  color: rgb(0, 0, 0);
+  padding: 8px 16px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.05);
+}
+
 /* NAVBAR */
 .navbar {
   display: flex;
@@ -63,6 +75,7 @@ body {
   justify-content: center;
   flex-direction: column;
   margin-top: 10vh;
+  position: relative;
 }
 
 .profile-header {
