--- a/chat/static/chat/css/style.css
+++ b/chat/static/chat/css/style.css
@@ -120,8 +120,12 @@ body {
 
 
 /* ====== CONTAINER PRINCIPAL ====== */
+.containers{
+    display: flex;
+}
+
 .container-1 {
-    position: absolute;
+    position: relative;
     
     left: 0;
     width: 22vw;
